<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ *******************************************************************************
  ~   Copyright (c) 2013-2014 Gabriele Mariotti.
  ~
  ~   Licensed under the Apache License, Version 2.0 (the "License");
  ~   you may not use this file except in compliance with the License.
  ~   You may obtain a copy of the License at
  ~
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~   Unless required by applicable law or agreed to in writing, software
  ~   distributed under the License is distributed on an "AS IS" BASIS,
  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   See the License for the specific language governing permissions and
  ~   limitations under the License.
  ~  *****************************************************************************
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:card="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/card_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <!-- Expand card with button-->
            <TextView
                style="@style/AppTheme.TitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/demo_section_card_expand_example1"/>

            <it.gmariotti.cardslib.library.view.CardView
                android:id="@+id/carddemo_example_card_expand1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="12dp"/>

            <!-- Expand card with all card-->
            <TextView
                style="@style/AppTheme.TitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/demo_section_card_expand_example2"/>

            <it.gmariotti.cardslib.library.view.CardView
                android:id="@+id/carddemo_example_card_expand2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="12dp"/>

            <!-- Expand a card with collpse section inside -->
            <TextView
                style="@style/AppTheme.TitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/demo_section_card_expand_example5"/>

            <it.gmariotti.cardslib.library.view.CardView
                android:id="@+id/carddemo_example_card_expand5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                card:card_layout_resourceID="@layout/carddemo_example_expandinside_card_layout"
                android:layout_marginTop="12dp"/>

            <!-- Expand by clicking the text -->
            <TextView
                style="@style/AppTheme.TitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/demo_section_card_expand_example3"/>

            <it.gmariotti.cardslib.library.view.CardView
                android:id="@+id/carddemo_example_card_expand3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="12dp"/>

            <!-- Expand by clicking the image -->
            <TextView
                style="@style/AppTheme.TitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/demo_section_card_expand_example4"/>

            <it.gmariotti.cardslib.library.view.CardView
                android:id="@+id/carddemo_example_card_expand4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                card:card_layout_resourceID="@layout/card_thumbnail_layout"
                android:layout_marginTop="12dp"/>



            <!-- Empty view-->
            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>